--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@ footer {
 .content {
   max-width: 700px;
   margin: 0 auto;
-  padding-bottom: 250px;
+  padding-bottom: 50px;
 }
 .content p {
   font-family: Georgia,Cambria,"Times New Roman",Times,serif;
@@ -100,12 +100,12 @@ footer {
 }
 
 .content img {
-    margin-bottom: 50px;
-    margin-left: -40px;
-    max-height: 450px;
-    object-fit: cover;
-    width: 115%;
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
+    margin-bottom: 50px;
+    margin-left: -170px;
+    max-height: 90%;
+    object-fit: cover;
+    width: 150%;
 }
 
 h1, h2 {
