--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ html {
 }
 body {
   font-family: Georgia,Cambria,"Times New Roman",Times,serif;
-  background: #fafafa;
+  background: #fff;
   padding: 0;
 }
 a {
