--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ body {
   font-family: Georgia,Cambria,"Times New Roman",Times,serif;
   background: #fff;
   padding: 0;
+  margin: 0;
 }
 a {
   text-decoration: none;
@@ -24,8 +25,8 @@ header {
    padding: 5px;
 }
 footer {
-    background: #f1f1f1;
-    color: #ababab;
+    background: #030409;
+    color: #fff;
     font-size: 14px;
     margin-top: 50px;
     padding: 100px;
