--- a/css/styles.css
+++ b/css/styles.css
@@ -157,7 +157,7 @@ h2 {
 }
 
 @media only screen and (min-width: 64em) {
-.box:nth-of-type(4) img, .box:nth-of-type(5) img {
+.box:nth-of-type(1) img, .box:nth-of-type(2) img, .box:nth-of-type(3) img, .box:nth-of-type(4) img, .box:nth-of-type(5) img {
     margin-bottom: -200px;
     max-height: 350px;
 	
