--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ h2 {
     margin-top: -250px;
 }
 	
- .box:nth-of-type(4) h2, .box:nth-of-type(5) h2 {
+ .box:nth-of-type(1) h2, .box:nth-of-type(2) h2, .box:nth-of-type(3) h2, .box:nth-of-type(4) h2, .box:nth-of-type(5) h2 {
     color: #fff;
     font-size: 25px;
 	 
