--- a/css/styles.css
+++ b/css/styles.css
@@ -173,7 +173,7 @@ h2 {
     font-size: 25px;
 	 
 }
-.box:nth-of-type(4) .date-title-home, .box:nth-of-type(5) .date-title-home {
+.box:nth-of-type(1) .date-title-home, .box:nth-of-type(2) .date-title-home, .box:nth-of-type(3) .date-title-home, .box:nth-of-type(4) .date-title-home, .box:nth-of-type(5) .date-title-home {
    color: #fff;
    opacity: .7;
 }
