--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ h2 {
     max-height: 350px;
 	
 }
- .box:nth-of-type(4) .gradient, .box:nth-of-type(5) .gradient {
+ .box:nth-of-type(1) .gradient, .box:nth-of-type(2) .gradient, .box:nth-of-type(3) .gradient, .box:nth-of-type(4) .gradient, .box:nth-of-type(5) .gradient {
     background-image: linear-gradient(180deg, transparent, #000000d1);
     height: 280px;
     margin-top: -250px;
