--- a/css/styles.css
+++ b/css/styles.css
@@ -156,32 +156,37 @@ h2 {
 }
 
 @media only screen and (min-width: 64em) {
-.box:nth-of-type(4) img, .box:nth-of-type(5) img {
+.box:nth-of-type(6) img, .box:nth-of-type(7) img, .box:nth-of-type(8) img  {
     margin-bottom: -200px;
     max-height: 350px;
 	
 }
- .box:nth-of-type(4) .gradient, .box:nth-of-type(5) .gradient {
+ .box:nth-of-type(6) .gradient, .box:nth-of-type(7) .gradient, .box:nth-of-type(8) .gradient {
     background-image: linear-gradient(180deg, transparent, #000000d1);
     height: 280px;
     margin-top: -250px;
 }
 	
- .box:nth-of-type(4) h2, .box:nth-of-type(5) h2 {
+ .box:nth-of-type(6) h2, .box:nth-of-type(7) h2, .box:nth-of-type(8) h2 {
     color: #fff;
     font-size: 25px;
 	 
 }
-.box:nth-of-type(4) .date-title-home, .box:nth-of-type(5) .date-title-home {
+.box:nth-of-type(6) .date-title-home, .box:nth-of-type(7) .date-title-home, .box:nth-of-type(8) .date-title-home {
    color: #fff;
    opacity: .7;
 }
 }
 
-.box:nth-of-type(1) img, .box:nth-of-type(2) img, .box:nth-of-type(3) img {
+.box:nth-of-type(1) img, .box:nth-of-type(2) img, .box:nth-of-type(3) img, .box:nth-of-type(4) img, .box:nth-of-type(5) img {
    display: none;
 }
 
 .box p {
   font-size: 0;
+}
+
+
+#mce_0 {
+   display: none;
 }
