--- a/css/styles.css
+++ b/css/styles.css
@@ -156,29 +156,29 @@ h2 {
 }
 
 @media only screen and (min-width: 64em) {
-.box:nth-of-type(6) img, .box:nth-of-type(7) img, .box:nth-of-type(8) img  {
+.box:nth-of-type(1) img, .box:nth-of-type(2) img, .box:nth-of-type(3) img  {
     margin-bottom: -200px;
     max-height: 350px;
 	
 }
- .box:nth-of-type(6) .gradient, .box:nth-of-type(7) .gradient, .box:nth-of-type(8) .gradient {
+ .box:nth-of-type(1) .gradient, .box:nth-of-type(2) .gradient, .box:nth-of-type(3) .gradient {
     background-image: linear-gradient(180deg, transparent, #000000d1);
     height: 280px;
     margin-top: -250px;
 }
 	
- .box:nth-of-type(6) h2, .box:nth-of-type(7) h2, .box:nth-of-type(8) h2 {
+ .box:nth-of-type(1) h2, .box:nth-of-type(2) h2, .box:nth-of-type(3) h2 {
     color: #fff;
     font-size: 25px;
 	 
 }
-.box:nth-of-type(6) .date-title-home, .box:nth-of-type(7) .date-title-home, .box:nth-of-type(8) .date-title-home {
+.box:nth-of-type(1) .date-title-home, .box:nth-of-type(2) .date-title-home, .box:nth-of-type(3) .date-title-home {
    color: #fff;
    opacity: .7;
 }
 }
 
-.box:nth-of-type(1) img, .box:nth-of-type(2) img, .box:nth-of-type(3) img, .box:nth-of-type(4) img, .box:nth-of-type(5) img {
+.box:nth-of-type(4) img, .box:nth-of-type(5) img, .box:nth-of-type(6) img, .box:nth-of-type(7) img, .box:nth-of-type(8) img {
    display: none;
 }
 
@@ -187,6 +187,6 @@ h2 {
 }
 
 
-#mce_0 {
+#mce_0, #mce_1 {
    display: none;
 }
