--- a/css/styles.css
+++ b/css/styles.css
@@ -156,31 +156,29 @@ h2 {
 }
 
 @media only screen and (min-width: 64em) {
-.box:nth-of-type(1) img, .box:nth-of-type(2) img, .box:nth-of-type(3) img  {
+.box img {
     margin-bottom: -200px;
     max-height: 350px;
 	
 }
- .box:nth-of-type(1) .gradient, .box:nth-of-type(2) .gradient, .box:nth-of-type(3) .gradient {
+ .box .gradient {
     background-image: linear-gradient(180deg, transparent, #000000d1);
     height: 280px;
     margin-top: -250px;
 }
 	
- .box:nth-of-type(1) h2, .box:nth-of-type(2) h2, .box:nth-of-type(3) h2 {
+ .box h2 {
     color: #fff;
     font-size: 25px;
 	 
 }
-.box:nth-of-type(1) .date-title-home, .box:nth-of-type(2) .date-title-home, .box:nth-of-type(3) .date-title-home {
+.box .date-title-home {
    color: #fff;
    opacity: .7;
 }
 }
 
-.box:nth-of-type(4) img, .box:nth-of-type(5) img, .box:nth-of-type(6) img, .box:nth-of-type(7) img, .box:nth-of-type(8) img {
-   display: none;
-}
+
 
 .box p {
   font-size: 0;
