--- a/css/styles.css
+++ b/css/styles.css
@@ -162,7 +162,7 @@ h2 {
 	
 }
  .box .gradient {
-    background-image: linear-gradient(180deg, transparent, #000000d1);
+    background-image: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.45702030812324934) 36%, rgba(0,0,0,0) 100%);
     height: 280px;
     margin-top: -250px;
 }
