--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ footer {
   border-radius: 6px;
   overflow: hidden;
   border: 1px solid #dcdcdc;
+  box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
  }
 .grid-item:hover {
   cursor: pointer;
@@ -161,7 +162,7 @@ h2 {
 	
 }
  .box .gradient {
-    background-image: linear-gradient(0deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.45702030812324934) 36%, rgba(0,0,0,0) 100%);
+    background-image: linear-gradient(0deg, #00000052, #00000003);
     height: 280px;
     margin-top: -250px;
 }
